# slither

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitmodules  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  .yamllint  ADVANCED_OPTIMIZATION_FRAMEWORK_2759.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  FUNDING.json  FalseOrder.sol  Flaming Farm  Makefile  OPTIMIZATION_SUMMARY.md  README.md  TEST_ROUNDING.md  UnoSwap  funding.json  integer_overflow_mapping_sym_1.sol  optimization_framework.js  pyproject.toml  setup.py  simple_test.sol  slither.py  slithir-ssa.txt  test-script.py  test.json  test.py  test.sol  test.txt  test_ci_locally.sh  test_contract.sol  test_counter.sol  (+3 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/DISCUSSION_TEMPLATE/: installation.yml  trouble_with_installation.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  bug_report.yml  detector_bug.md  detector_request.md  false_negative.yml  false_positive.yml  feature_request.yml  trouble_with_installation.yml
.github/PULL_REQUEST_TEMPLATE/: enhance_detector.md  general.md  new_detector.md
.github/linters/: .markdown-lint.yaml  .markdownlint.json
.github/scripts/: integration_test_runner.sh  tool_test_runner.sh  unit_test_runner.sh
.github/workflows/: IR.yml  black.yml  black_auto.yml  black_manual.yaml  ci.yml  ci_pr.yml  codeql.yml  compilation.yml  detectors.yml  docker.yml  docs.yml  doctor.yml  features.yml  issue-metrics.yml  lint.yml  linter.yml  parser.yml  pip-audit.yml  publish.yml  pylint.yml  pytest.yml  read_storage.yml  release.yml  ruff.yml  static.yml  test.yml
.serena/: project.yml
.trunk/: trunk.yaml
Sintayew4/ Sintayew4/: slither
contracts1/: contract001.sol  contract002.sol  contract003.sol  contract004.sol  contract005.sol
docs/: PRINTERS.md  index.html  slither.html
docs/slither/: all_exceptions.html  analyses.html  core.html  detectors.html  exceptions.html  formatters.html  printers.html  slither.html  slithir.html  solc_parsing.html  utils.html  visitors.html
docs/src/: README.md  SUMMARY.md  Usage.md
examples/bugs/: old_solc.sol  pragma.0.4.24.sol  uninitialized.sol  uninitialized_storage_pointer.sol
examples/flat/: a.sol  b.sol
examples/printers/: authorization.sol  authorization.sol-MyContract-constructor().dot  authorization.sol-MyContract-mint(uint256).dot  authorization.sol-MyContract-onlyOwner().dot  authorization.sol-Owner-onlyOwner().dot  call_graph.sol  call_graph.sol-ContractA-my_func_a().dot  call_graph.sol-ContractA-slitherConstructorVariables().dot  call_graph.sol-ContractB-constructor().dot  call_graph.sol-ContractB-my_func_a().dot  call_graph.sol-ContractB-my_func_b().dot  call_graph.sol-ContractB-my_second_func_b().dot  call_graph.sol-Library-library_func().dot  call_graph.sol.dot  constructors.sol  data_dependencies.sol  evm.sol  human_printer.sol  inheritances.sol  inheritances.sol.dot  inheritances.sol.inheritance-graph.dot  inheritances_graph.sol  inheritances_graph.sol.dot  quick_summary.sol  slihtir.sol  test1.json  vyper_erc20.py
examples/scripts/: call_graph.py  convert_to_evm_ins.py  (+17 more)
files/: connecting.txt  crossing.txt  ergonomic.txt  firewall_input_pennsylvania.txt  hdd.txt  maryland.txt  practical_avon_tan.txt  redefine.txt  regional_soft_firewall.txt  reintermediate.txt  slovakia_pound.txt  transition.txt  virginia.txt
interval_analysis_results/: interval_analysis_report.json  interval_analysis_report.txt
new_ir_tests/: simple_nested_with_mapping.py  simple_nested_with_mapping.sol  simple_storage.py  simple_storage.sol  test_print.py
noarch/: current_repodata.json  index.html
plugin_example/: README.md  pyproject.toml  setup.py
plugin_example/slither_my_plugin/: __init__.py
plugin_example/slither_my_plugin/detectors/: example.py
scripts/: ast_parsing_test.py  benchmark_perf.py  ci_generate_test_detectors_4.sh  ci_generate_test_detectors_5.sh  ci_generate_test_detectors_6.sh  ci_generate_test_detectors_7.sh  ci_test.sh  ci_test_ast.sh  ci_test_cli.sh  ci_test_common.sh  ci_test_dapp.sh  ci_test_data_dependency.sh  ci_test_detectors_4.sh  ci_test_detectors_5.sh  ci_test_detectors_6.sh  ci_test_detectors_7.sh  ci_test_embark.sh  ci_test_erc.sh  ci_test_etherlime.sh  ci_test_etherscan.sh  ci_test_find_paths.sh  ci_test_flat.sh  ci_test_interface.sh  ci_test_kspec.sh  ci_test_path_filtering  ci_test_path_filtering.sh  ci_test_printers.sh  ci_test_prop.sh  ci_test_read_storage.sh  ci_test_simil.sh  ci_test_slither_config.sh  ci_test_truffle.sh  ci_test_upgradability.sh  fix_travis_relative_paths.sh  json_diff.py  pretty_print_and_sort_json.py  pretty_print_json.py  tests_generate_expected_json.sh  tests_generate_expected_json_4.sh  tests_generate_expected_json_5.sh  (+20 more)
slither/: __init__.py  __main__.py  all_exceptions.py  exceptions.py  slither.py  slither_solidity.py  slither_vyper.py  test.py
tests/: .gitattributes  arbitrary_send.arbitrary-send.json  arbitrary_send.sol  backdoor.sol  complex_func.sol  conftest.py  const_state_variables.constable-states.json  const_state_variables.sol  constant_folding_binop.sol  constant_folding_rational.sol  constant_folding_unary.sol  controlled_delegatecall.sol  deprecated_calls.sol  external_function.external-function.json  external_function.sol  external_function1.sol  external_function_test_2.sol  external_function_test_3.sol  generated_tests.py  incorrect_erc20_interface.sol  inheritance_graph.sol  inheritance_graph.sol.inheritance-graph.dot  inline_assembly_contract.assembly.json  inline_assembly_library-0.5.1.sol  inline_assembly_library.assembly.json  locked_ether-0.5.1.sol  locked_ether.sol  low_level_calls.low-level-calls.json  low_level_calls.sol  mock_permit_domain_collision.sol  naming_convention.naming-convention.json  naming_convention.sol  old_solc.sol  old_solc.sol.json  old_solc.sol.json.solc-version.json  pragma.0.4.24.sol  reentrancy-0.5.1.sol  reentrancy.reentrancy.json  reentrancy.sol  reentrancy_indirect.sol  (+39 more)
web/: app.py
(+6177 files in other folders)
